@@ -18,6 +18,7 @@ DIST subversion-1.6.2.tar.bz2 5470969 RMD160 b20b4950188f2482984a1e7b0e5e0bdfccb
 EBUILD subversion-1.5.5.ebuild 13419 RMD160 73f39c2107995846e249135a90fd9c9f76db2e7f SHA1 36462e2c37f7b20f04ff4f1c274565f69a66dcbf SHA256 fab6e710e6d26f16661964378499b4649ac72a545d7f7e3ccdea706aad575ea2
 EBUILD subversion-1.5.6.ebuild 13452 RMD160 fb3ea80c24ba77186e181848d0d38c3876086903 SHA1 cfb7388239014503ac4931b635b265c4907c6100 SHA256 72d150bf80bd01bf9d05f3f597f56e34ad3fa3af5dc8598276cdff2224aba528
 EBUILD subversion-1.6.1.ebuild 17094 RMD160 8bab64e4d8ecf283c6402b42b7e3a45a5252e4d0 SHA1 36dde599532738402cea840358658fb5d8981e3c SHA256 3eccbc96d87e28f79c05b3e23de018cfcf0cc48a326b7704387ae52e001a9a87
-EBUILD subversion-1.6.2.ebuild 26118 RMD160 d7ddabdc63fb98e4db00d361f08d7175b0cd5bfc SHA1 36b9b310e2c60ff20db211dfce4d26c0f96f3bba SHA256 1609449b87a42be5fbbb730ac5250ac7385c44ef08a89e57a92e2bfd23cc7c55
-MISC ChangeLog 63339 RMD160 a20f6bb592ce02a289a8e8795f1662956563390a SHA1 2bb7a3d2f3fc2434a59631e6776bafc23d29ffa1 SHA256 36211d32f547597f8442f63c6c305defe5ee32598bc67122694a7cfd2d205b1e
+EBUILD subversion-1.6.2-r10.ebuild 26122 RMD160 3f662aab7857db7bfabe7bedd63263c61f7f5bf9 SHA1 2ef45838cef41f4c244d3923b355d6aceb321300 SHA256 823f26db16f54124b59eab57471248f4b2c80552557659b85a05acb5affd75ea
+EBUILD subversion-1.6.2.ebuild 25789 RMD160 80865eadb621126f8a8ad8b1c91789986cc76364 SHA1 ba8de53341166c2861bcbf8265305a6fce35cf4c SHA256 fe16d31e1550683cd330fb6c1123a74f8a42681ce02c6305500192daa7d49dc1
+MISC ChangeLog 63613 RMD160 fda271a1335c0c12d0673edb6187a370eda7a765 SHA1 5881d0b2594d194c82724faf598042edb3beeaa3 SHA256 092536bcec29c3971bf94443fde585caca30afbdc490190b6e9fadafc6f245c4
 MISC metadata.xml 794 RMD160 6e8968481ac256000ec54f71bac21c7b4cbde1cc SHA1 c753273c54c52d52187cb886e35dc08726f1b97e SHA256 3d7a28065aaf0e28837de71ccde29de53a074b5b3ede715c1b412cf5a43aaeac
