@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/subversion
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.378 2009/05/26 17:02:05 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.379 2009/06/09 09:48:10 arfrever Exp $
+
+*subversion-1.6.2-r10 (09 Jun 2009)
+
+  09 Jun 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  subversion-1.6.2.ebuild, +subversion-1.6.2-r10.ebuild:
+  Copy 1.6.2 to 1.6.2-r10 without changes. Disable KDE support in 1.6.2 to
+  allow earlier stabilization.
 
   26 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   subversion-1.5.5.ebuild, subversion-1.5.6.ebuild, subversion-1.6.1.ebuild,
